# crust-sworker-teaclave

./: .gitignore  Makefile  README.md  buildenv.mk
docker/: build.sh
docker/runner/: Dockerfile  start_sworker.sh
scripts/: install.sh
src/: Makefile
src/app/: Cargo.toml
src/app/src/: main.rs  srd.rs  utils.rs  webserver.rs
src/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml
src/enclave/src/: lib.rs  srd.rs
