[package]
name = "crust-sworker-t"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2018"

[dependencies]
threadpool = "1.0"
actix-web = "3"
serde = "1"
serde_json = "1"
futures = "0.3"
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "/opt/intel/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "/opt/intel/incubator-teaclave-sgx-sdk/sgx_urts" }
